<resources>
    <string name="app_name">Assignment02</string>
    <string name="color_selection_title">Color Selection</string>
    <string name="color_HEX">Color HEX :</string>
    <string name="color_RGB">Color RGB :</string>
    <string name="red_Textview">Red:</string>
    <string name="green_textview">Green:</string>
    <string name="blue_textview">Blue:</string>
    <string name="white_button">White</string>
    <string name="black_button">Black</string>
    <string name="blue_button">Blue</string>
    <string name="reset_button">Reset\n</string>
    <string name="redValue">64\n</string>
    <string name="blueValue">128</string>
    <string name="greenValue">0</string>
    <string name="rgbValue"></string>
    <string name="HEX_value"></string>
</resources>