<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/color_selection_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/colorView"
        android:layout_width="140dp"
        android:layout_height="139dp"
        android:layout_marginTop="12dp"
        android:background="#408000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:text="@string/color_HEX"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:text="@string/color_RGB"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/redTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/red_Textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/greenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/green_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redTextView" />

    <TextView
        android:id="@+id/blueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/blue_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenTextView" />

    <SeekBar
        android:id="@+id/redSeekbar"
        android:layout_width="297dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:max="255"
        android:progress="64"
        app:layout_constraintStart_toEndOf="@+id/redTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <SeekBar
        android:id="@+id/greenSeekbar"
        android:layout_width="299dp"
        android:layout_height="18dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:max="255"
        android:progress="128"
        app:layout_constraintStart_toEndOf="@+id/greenTextView"
        app:layout_constraintTop_toBottomOf="@+id/redSeekbar" />

    <SeekBar
        android:id="@+id/blueSeekbar"
        android:layout_width="298dp"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:max="255"
        android:progress="20"
        app:layout_constraintStart_toEndOf="@+id/blueTextView"
        app:layout_constraintTop_toBottomOf="@+id/greenSeekbar" />

    <TextView
        android:id="@+id/redValue"
        android:layout_width="51dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/redValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/redSeekbar"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/greenValue"
        android:layout_width="54dp"
        android:layout_height="24dp"
        android:layout_marginTop="9dp"
        android:text="@string/blueValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greenSeekbar"
        app:layout_constraintTop_toBottomOf="@+id/redValue" />

    <TextView
        android:id="@+id/blueValue"
        android:layout_width="39dp"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/greenValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/blueSeekbar"
        app:layout_constraintTop_toBottomOf="@+id/greenValue" />

    <Button
        android:id="@+id/white_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/white_button"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blueTextView" />

    <Button
        android:id="@+id/black_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:text="@string/black_button"
        app:layout_constraintStart_toEndOf="@+id/white_button"
        app:layout_constraintTop_toBottomOf="@+id/blueTextView" />

    <Button
        android:id="@+id/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0000FF"
        android:text="@string/blue_button"
        app:layout_constraintStart_toEndOf="@+id/black_button"
        app:layout_constraintTop_toBottomOf="@+id/blueTextView" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="375dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_button" />

    <TextView
        android:id="@+id/HEX_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/HEX_value"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/colorView" />

    <TextView
        android:id="@+id/rgb_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/rgbValue"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/HEX_value" />
</androidx.constraintlayout.widget.ConstraintLayout>